k0s/manifests/common.yaml
---
# Common Namespaces
apiVersion: v1
kind: Namespace
metadata:
  name: homelab
  labels:
    name: homelab
    istio-injection: disabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    name: monitoring
---
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    name: argocd
---
apiVersion: v1
kind: Namespace
metadata:
  name: kube-system
  labels:
    name: kube-system
